add default config
Signed-off-by: SchumyHao <schumyhaojl@126.com>

--- a/firmware/esp/platformio.ini
+++ b/firmware/esp/platformio.ini
@@ -15,7 +15,9 @@ LIB_DIR = libraries
 ; using ${common_env_data.***} (see below)
 [common_env_data]
 build_flags =
-    -D VERSION=0.0.2
+    -D VERSION_M=0
+    -D VERSION_N=0
+    -D VERSION_P=3
     -D DEBUG=1
 ;lib_deps_builtin =
 lib_deps_external =
