--- a/firmware/esp/ser2net/platformio.ini
+++ b/firmware/esp/ser2net/platformio.ini
@@ -35,5 +35,7 @@ build_flags =
     ${common_env_data.build_flags}
 
 monitor_speed = 115200
+upload_port = /dev/tty.wchusbserial1410 
+monitor_port = /dev/tty.wchusbserial1410 
 lib_deps =
     ${common_env_data.lib_deps_external}
