--- a/firmware/esp/esp_z2m/platformio.ini
+++ b/firmware/esp/esp_z2m/platformio.ini
@@ -55,5 +55,5 @@ lib_deps =
 [env:z2m]
 board = esp_wroom_02
 board_build.ldscript      = eagle.flash.2m1m.ld
-build_flags               = ${env.build_flags} -D DISABLE_MQTT -D DISABLE_MQTT_DISCOVERY
+build_flags               = ${env.build_flags} -D DISABLE_MQTT -D DISABLE_MQTT_DISCOVERY -D FORCE_SERIAL_LOG
 
